fix(genesis landing): fix background img on mobile

--- a/src/styles/Genesis.css
+++ b/src/styles/Genesis.css
@@ -87,7 +87,7 @@
   }
 
   .genesisContainer {
-    background-position: center;
+    background-size: cover;
     padding: 20px;
   }
   .genesisBodyTitle {
